src/apapl/parser/prolog/PrologParser.java
/* Generated By:JavaCC: Do not edit this line. PrologParser.java */
package apapl.parser.prolog;

import apapl.beliefinertia.dependencyset.InferenceRules;

/**
 * Basic Prolog parsing for belief inertia. 
 * Collect the predicates and heads of all inference rules and store them in a hashmap indexed by the head
 * Omit built-in predicates, and add "rand" if it is used in the rule.
 * See apapl.BeliefInertia.BeliefInertia.
 * 
 * Original JavaCC parser by Bas Testerink, Java code changed by Marc van Zee for belief inertia
 * 
 * @author Bas Testerink Utrecht University, The Netherlands
 * 
 */
public class PrologParser implements PrologParserConstants {

// PROLOG: 
  final public void Argument(InferenceRules rules, boolean isHead, boolean isPredicate) throws ParseException {
    if (jj_2_1(2147483647)) {
      Infix(rules, isHead, isPredicate);
    } else if (jj_2_2(2147483647)) {
      Number();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
      case STD_IDENTIFIER:
      case SEMICOLON:
      case NOTSPACE:
      case ADD:
      case SUBTRACT:
      case IMPLY:
      case MULTIPLY:
      case POWER:
      case DIVIDE:
      case BITAND:
      case UNIFICATION:
      case ARITHUNIF:
      case ARITHNOTUNIF:
      case EQLT:
      case TERMDECOMPOSITION:
      case EQUALS:
      case BACKSLASH:
      case NOT:
      case BITOR:
      case NOTUNIFIABLE:
      case NOTEQUALS:
      case TERMGTEQ:
      case TERMEQLT:
      case TERMLT:
      case TERMGT:
      case TERMEQ:
      case TERMNEQ:
      case LT:
      case SHIFTLEFT:
      case GT:
      case SHIFTRIGHT:
      case GTEQ:
      case ASSIGN:
      case POWER2:
      case XOR:
      case REMAINDER:
      case INTDIVIDE:
      case MODULO:
      case COLON:
      case NORMAND:
        Predicate(rules, isHead, isPredicate);
        break;
      case LPAREN:
        Parenthesized(rules, isHead, isPredicate);
        break;
      case VAR_IDENTIFIER:
        Var();
        break;
      case LBRACKET:
        List(rules, isHead, isPredicate);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Number() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBTRACT:
      jj_consume_token(SUBTRACT);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      jj_consume_token(INTEGER_LITERAL);
      break;
    case FLOATING_POINT_LITERAL:
      jj_consume_token(FLOATING_POINT_LITERAL);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Predicate(InferenceRules rules, boolean isHead, boolean isPredicate) throws ParseException {
        Token pred;
        String predImg;
    if (jj_2_3(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOTSPACE:
        jj_consume_token(NOTSPACE);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      pred = jj_consume_token(STD_IDENTIFIER);
                        predImg = pred.image;
                        if (!isPredicate)               rules.addFunction(predImg);
                        else if (isHead)                rules.setCurrentHead(predImg);
                                 else                           rules.addPredicate(predImg);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
        jj_consume_token(CHARACTER_LITERAL);
        break;
      case SEMICOLON:
      case NOTSPACE:
      case ADD:
      case SUBTRACT:
      case IMPLY:
      case MULTIPLY:
      case POWER:
      case DIVIDE:
      case BITAND:
      case UNIFICATION:
      case ARITHUNIF:
      case ARITHNOTUNIF:
      case EQLT:
      case TERMDECOMPOSITION:
      case EQUALS:
      case BACKSLASH:
      case NOT:
      case BITOR:
      case NOTUNIFIABLE:
      case NOTEQUALS:
      case TERMGTEQ:
      case TERMEQLT:
      case TERMLT:
      case TERMGT:
      case TERMEQ:
      case TERMNEQ:
      case LT:
      case SHIFTLEFT:
      case GT:
      case SHIFTRIGHT:
      case GTEQ:
      case ASSIGN:
      case POWER2:
      case XOR:
      case REMAINDER:
      case INTDIVIDE:
      case MODULO:
      case COLON:
      case NORMAND:
        Operator();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      Argument(rules, isHead, false);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        Argument(rules, isHead, false);
      }
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  final public void Operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
      jj_consume_token(ADD);
      break;
    case SUBTRACT:
      jj_consume_token(SUBTRACT);
      break;
    case IMPLY:
      jj_consume_token(IMPLY);
      break;
    case MULTIPLY:
      jj_consume_token(MULTIPLY);
      break;
    case POWER:
      jj_consume_token(POWER);
      break;
    case DIVIDE:
      jj_consume_token(DIVIDE);
      break;
    case BITAND:
      jj_consume_token(BITAND);
      break;
    case UNIFICATION:
      jj_consume_token(UNIFICATION);
      break;
    case ARITHUNIF:
      jj_consume_token(ARITHUNIF);
      break;
    case ARITHNOTUNIF:
      jj_consume_token(ARITHNOTUNIF);
      break;
    case EQLT:
      jj_consume_token(EQLT);
      break;
    case TERMDECOMPOSITION:
      jj_consume_token(TERMDECOMPOSITION);
      break;
    case EQUALS:
      jj_consume_token(EQUALS);
      break;
    case BACKSLASH:
      jj_consume_token(BACKSLASH);
      break;
    case BITOR:
      jj_consume_token(BITOR);
      break;
    case NOTUNIFIABLE:
      jj_consume_token(NOTUNIFIABLE);
      break;
    case NOTEQUALS:
      jj_consume_token(NOTEQUALS);
      break;
    case TERMGTEQ:
      jj_consume_token(TERMGTEQ);
      break;
    case TERMEQLT:
      jj_consume_token(TERMEQLT);
      break;
    case TERMLT:
      jj_consume_token(TERMLT);
      break;
    case TERMGT:
      jj_consume_token(TERMGT);
      break;
    case TERMEQ:
      jj_consume_token(TERMEQ);
      break;
    case TERMNEQ:
      jj_consume_token(TERMNEQ);
      break;
    case LT:
      jj_consume_token(LT);
      break;
    case SHIFTLEFT:
      jj_consume_token(SHIFTLEFT);
      break;
    case GT:
      jj_consume_token(GT);
      break;
    case SHIFTRIGHT:
      jj_consume_token(SHIFTRIGHT);
      break;
    case GTEQ:
      jj_consume_token(GTEQ);
      break;
    case ASSIGN:
      jj_consume_token(ASSIGN);
      break;
    case POWER2:
      jj_consume_token(POWER2);
      break;
    case XOR:
      jj_consume_token(XOR);
      break;
    case REMAINDER:
      jj_consume_token(REMAINDER);
      break;
    case INTDIVIDE:
      jj_consume_token(INTDIVIDE);
      break;
    case MODULO:
      jj_consume_token(MODULO);
      break;
    case COLON:
      jj_consume_token(COLON);
      break;
    case NORMAND:
      jj_consume_token(NORMAND);
      break;
    case NOTSPACE:
      jj_consume_token(NOTSPACE);
      break;
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Bodypart(InferenceRules rules) throws ParseException {
    if (jj_2_4(2147483647)) {
      Infix(rules, false, true);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
      case STD_IDENTIFIER:
      case SEMICOLON:
      case NOTSPACE:
      case ADD:
      case SUBTRACT:
      case IMPLY:
      case MULTIPLY:
      case POWER:
      case DIVIDE:
      case BITAND:
      case UNIFICATION:
      case ARITHUNIF:
      case ARITHNOTUNIF:
      case EQLT:
      case TERMDECOMPOSITION:
      case EQUALS:
      case BACKSLASH:
      case NOT:
      case BITOR:
      case NOTUNIFIABLE:
      case NOTEQUALS:
      case TERMGTEQ:
      case TERMEQLT:
      case TERMLT:
      case TERMGT:
      case TERMEQ:
      case TERMNEQ:
      case LT:
      case SHIFTLEFT:
      case GT:
      case SHIFTRIGHT:
      case GTEQ:
      case ASSIGN:
      case POWER2:
      case XOR:
      case REMAINDER:
      case INTDIVIDE:
      case MODULO:
      case COLON:
      case NORMAND:
        Predicate(rules, false, true);
        break;
      case LPAREN:
        Parenthesized(rules, false, true);
        break;
      case VAR_IDENTIFIER:
        Var();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Infix(InferenceRules rules, boolean inHead, boolean isPredicate) throws ParseException {
    if (jj_2_5(2147483647)) {
      Number();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHARACTER_LITERAL:
      case STD_IDENTIFIER:
      case SEMICOLON:
      case NOTSPACE:
      case ADD:
      case SUBTRACT:
      case IMPLY:
      case MULTIPLY:
      case POWER:
      case DIVIDE:
      case BITAND:
      case UNIFICATION:
      case ARITHUNIF:
      case ARITHNOTUNIF:
      case EQLT:
      case TERMDECOMPOSITION:
      case EQUALS:
      case BACKSLASH:
      case NOT:
      case BITOR:
      case NOTUNIFIABLE:
      case NOTEQUALS:
      case TERMGTEQ:
      case TERMEQLT:
      case TERMLT:
      case TERMGT:
      case TERMEQ:
      case TERMNEQ:
      case LT:
      case SHIFTLEFT:
      case GT:
      case SHIFTRIGHT:
      case GTEQ:
      case ASSIGN:
      case POWER2:
      case XOR:
      case REMAINDER:
      case INTDIVIDE:
      case MODULO:
      case COLON:
      case NORMAND:
        Predicate(rules, inHead, isPredicate);
        break;
      case LPAREN:
        Parenthesized(rules, inHead, isPredicate);
        break;
      case VAR_IDENTIFIER:
        Var();
        break;
      case LBRACKET:
        List(rules, inHead, isPredicate);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    Operator();
    Argument(rules, inHead, isPredicate);
  }

  final public void List(InferenceRules rules, boolean inHead, boolean isPredicate) throws ParseException {
    jj_consume_token(LBRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STD_IDENTIFIER:
    case VAR_IDENTIFIER:
    case LPAREN:
    case LBRACKET:
    case SEMICOLON:
    case NOTSPACE:
    case ADD:
    case SUBTRACT:
    case IMPLY:
    case MULTIPLY:
    case POWER:
    case DIVIDE:
    case BITAND:
    case UNIFICATION:
    case ARITHUNIF:
    case ARITHNOTUNIF:
    case EQLT:
    case TERMDECOMPOSITION:
    case EQUALS:
    case BACKSLASH:
    case NOT:
    case BITOR:
    case NOTUNIFIABLE:
    case NOTEQUALS:
    case TERMGTEQ:
    case TERMEQLT:
    case TERMLT:
    case TERMGT:
    case TERMEQ:
    case TERMNEQ:
    case LT:
    case SHIFTLEFT:
    case GT:
    case SHIFTRIGHT:
    case GTEQ:
    case ASSIGN:
    case POWER2:
    case XOR:
    case REMAINDER:
    case INTDIVIDE:
    case MODULO:
    case COLON:
    case NORMAND:
      ListPart(rules, inHead, false);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(RBRACKET);
  }

  final public void ListPart(InferenceRules rules, boolean inHead, boolean isPredicate) throws ParseException {
    Argument(rules, inHead, isPredicate);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
    case BAR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        ListPart(rules, inHead, isPredicate);
        break;
      case BAR:
        jj_consume_token(BAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          List(rules, inHead, isPredicate);
          break;
        case VAR_IDENTIFIER:
          Var();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  final public void Parenthesized(InferenceRules rules, boolean inHead, boolean isPredicate) throws ParseException {
    jj_consume_token(LPAREN);
    Argument(rules, inHead, isPredicate);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      Argument(rules, inHead, isPredicate);
    }
    jj_consume_token(RPAREN);
  }

  final public void Var() throws ParseException {
    jj_consume_token(VAR_IDENTIFIER);
  }

  final public void Rule(InferenceRules rules) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUESTION:
      jj_consume_token(QUESTION);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case CHARACTER_LITERAL:
      case STD_IDENTIFIER:
      case VAR_IDENTIFIER:
      case LPAREN:
      case LBRACKET:
      case SEMICOLON:
      case NOTSPACE:
      case ADD:
      case SUBTRACT:
      case IMPLY:
      case MULTIPLY:
      case POWER:
      case DIVIDE:
      case BITAND:
      case UNIFICATION:
      case ARITHUNIF:
      case ARITHNOTUNIF:
      case EQLT:
      case TERMDECOMPOSITION:
      case EQUALS:
      case BACKSLASH:
      case NOT:
      case BITOR:
      case NOTUNIFIABLE:
      case NOTEQUALS:
      case TERMGTEQ:
      case TERMEQLT:
      case TERMLT:
      case TERMGT:
      case TERMEQ:
      case TERMNEQ:
      case LT:
      case SHIFTLEFT:
      case GT:
      case SHIFTRIGHT:
      case GTEQ:
      case ASSIGN:
      case POWER2:
      case XOR:
      case REMAINDER:
      case INTDIVIDE:
      case MODULO:
      case COLON:
      case NORMAND:
        Bodypart(null);
        break;
      case BANG:
        jj_consume_token(BANG);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        label_3:
        while (true) {
          jj_consume_token(COMMA);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case FLOATING_POINT_LITERAL:
          case CHARACTER_LITERAL:
          case STD_IDENTIFIER:
          case VAR_IDENTIFIER:
          case LPAREN:
          case LBRACKET:
          case SEMICOLON:
          case NOTSPACE:
          case ADD:
          case SUBTRACT:
          case IMPLY:
          case MULTIPLY:
          case POWER:
          case DIVIDE:
          case BITAND:
          case UNIFICATION:
          case ARITHUNIF:
          case ARITHNOTUNIF:
          case EQLT:
          case TERMDECOMPOSITION:
          case EQUALS:
          case BACKSLASH:
          case NOT:
          case BITOR:
          case NOTUNIFIABLE:
          case NOTEQUALS:
          case TERMGTEQ:
          case TERMEQLT:
          case TERMLT:
          case TERMGT:
          case TERMEQ:
          case TERMNEQ:
          case LT:
          case SHIFTLEFT:
          case GT:
          case SHIFTRIGHT:
          case GTEQ:
          case ASSIGN:
          case POWER2:
          case XOR:
          case REMAINDER:
          case INTDIVIDE:
          case MODULO:
          case COLON:
          case NORMAND:
            Bodypart(null);
            break;
          case BANG:
            jj_consume_token(BANG);
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[17] = jj_gen;
            break label_3;
          }
        }
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      break;
    case CHARACTER_LITERAL:
    case STD_IDENTIFIER:
    case SEMICOLON:
    case NOTSPACE:
    case ADD:
    case SUBTRACT:
    case IMPLY:
    case MULTIPLY:
    case POWER:
    case DIVIDE:
    case BITAND:
    case UNIFICATION:
    case ARITHUNIF:
    case ARITHNOTUNIF:
    case EQLT:
    case TERMDECOMPOSITION:
    case EQUALS:
    case BACKSLASH:
    case NOT:
    case BITOR:
    case NOTUNIFIABLE:
    case NOTEQUALS:
    case TERMGTEQ:
    case TERMEQLT:
    case TERMLT:
    case TERMGT:
    case TERMEQ:
    case TERMNEQ:
    case LT:
    case SHIFTLEFT:
    case GT:
    case SHIFTRIGHT:
    case GTEQ:
    case ASSIGN:
    case POWER2:
    case XOR:
    case REMAINDER:
    case INTDIVIDE:
    case MODULO:
    case COLON:
    case NORMAND:
      Predicate(rules, true, true);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        jj_consume_token(SUBTRACT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STD_IDENTIFIER:
        case VAR_IDENTIFIER:
        case LPAREN:
        case LBRACKET:
        case SEMICOLON:
        case NOTSPACE:
        case ADD:
        case SUBTRACT:
        case IMPLY:
        case MULTIPLY:
        case POWER:
        case DIVIDE:
        case BITAND:
        case UNIFICATION:
        case ARITHUNIF:
        case ARITHNOTUNIF:
        case EQLT:
        case TERMDECOMPOSITION:
        case EQUALS:
        case BACKSLASH:
        case NOT:
        case BITOR:
        case NOTUNIFIABLE:
        case NOTEQUALS:
        case TERMGTEQ:
        case TERMEQLT:
        case TERMLT:
        case TERMGT:
        case TERMEQ:
        case TERMNEQ:
        case LT:
        case SHIFTLEFT:
        case GT:
        case SHIFTRIGHT:
        case GTEQ:
        case ASSIGN:
        case POWER2:
        case XOR:
        case REMAINDER:
        case INTDIVIDE:
        case MODULO:
        case COLON:
        case NORMAND:
          Bodypart(rules);
          break;
        case BANG:
          jj_consume_token(BANG);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          label_4:
          while (true) {
            jj_consume_token(COMMA);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INTEGER_LITERAL:
            case FLOATING_POINT_LITERAL:
            case CHARACTER_LITERAL:
            case STD_IDENTIFIER:
            case VAR_IDENTIFIER:
            case LPAREN:
            case LBRACKET:
            case SEMICOLON:
            case NOTSPACE:
            case ADD:
            case SUBTRACT:
            case IMPLY:
            case MULTIPLY:
            case POWER:
            case DIVIDE:
            case BITAND:
            case UNIFICATION:
            case ARITHUNIF:
            case ARITHNOTUNIF:
            case EQLT:
            case TERMDECOMPOSITION:
            case EQUALS:
            case BACKSLASH:
            case NOT:
            case BITOR:
            case NOTUNIFIABLE:
            case NOTEQUALS:
            case TERMGTEQ:
            case TERMEQLT:
            case TERMLT:
            case TERMGT:
            case TERMEQ:
            case TERMNEQ:
            case LT:
            case SHIFTLEFT:
            case GT:
            case SHIFTRIGHT:
            case GTEQ:
            case ASSIGN:
            case POWER2:
            case XOR:
            case REMAINDER:
            case INTDIVIDE:
            case MODULO:
            case COLON:
            case NORMAND:
              Bodypart(rules);
              break;
            case BANG:
              jj_consume_token(BANG);
              break;
            default:
              jj_la1[20] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[21] = jj_gen;
              break label_4;
            }
          }
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(DOT);
  }

  final public void Directive() throws ParseException {
    jj_consume_token(COLON);
    jj_consume_token(SUBTRACT);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case STD_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STD_IDENTIFIER:
        jj_consume_token(STD_IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DIVIDE:
